--- a/tarefa2.html
+++ b/tarefa2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Tarefa 1</title>
+    <title>Tarefa 2</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
     <script src='classes.js'></script>
@@ -14,17 +14,17 @@
 
     <script>
 
-        // 2- Crie as instâncias encontradas no texto
 
-        var Andre = new Garcon(nome: "Andre", idade: undefined, sexo: "M", localDeTrabalho: "Clube da Cerveja");
-        var Pedro = new Estudante(nome: "Pedro", idade: 20, sexo: "M", curso: "Engenharia de Computacao", instituicao: "UFOP", matricula: "21156");
-        var Ana = new Estudante(nome: "Ana", idade: 17, sexo: "F", curso: "Engenharia de Computacao", instituicao: "UFOP", matricula: "21157");
-        var Paulo = new Estudante(nome: "Paulo", idade: 23, sexo: "M", curso: undefined, instituicao: "UFOP", matricula: "21158");
-        var Armando = new Estudante(nome: "Armando", idade: 17, sexo: "M", curso: undefined, instituicao: "UFOP", matricula: "21159");
 
-        var UFOP = new Universidade("Engenharia de Computacao", 10, 3630);
+        let Andre = new Garcon(nome: "Andre", idade: undefined, sexo: "M", localDeTrabalho: "Clube da Cerveja");
+        let Pedro = new Estudante(nome: "Pedro", idade: 20, sexo: "M", curso: "Engenharia de Computacao", instituicao: "UFOP", matricula: "21156");
+        let Ana = new Estudante(nome: "Ana", idade: 17, sexo: "F", curso: "Engenharia de Computacao", instituicao: "UFOP", matricula: "21157");
+        let Paulo = new Estudante(nome: "Paulo", idade: 23, sexo: "M", curso: undefined, instituicao: "UFOP", matricula: "21158");
+        let Armando = new Estudante(nome: "Armando", idade: 17, sexo: "M", curso: undefined, instituicao: "UFOP", matricula: "21159");
 
-        var repOrfanato = new Republica("Republica Orfanato", 10, 5);
+        let UFOP = new Universidade("Engenharia de Computacao", 10, 3630);
+
+        let repOrfanato = new Republica("Republica Orfanato", 10, 5);
 
         console.log(Andre);
         console.log(Pedro);
